fixed route for sending emails
